--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -1,5 +1,8 @@
-:root {
-  --text-color: white;
-}
-
-$bg: black;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+$color-dark-text: #333;
+$color-light-text: #777;
+$color-white: #fff;
+$bg-img: #777;
+$bg-btn: #0069d9;
+$bg-color: #fff;
+$font-poppins: 'Poppins', sans-serif;
