--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,14 +1,19 @@
 @use 'variable';
-
-body {
-  margin: 0 auto;
-  background-color: variable.$bg;
-  color: var(--text-color);
-  font-size: 30px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-main {
+html {
+  font-size: 62.5%;
+}
+body {
+  padding: 2rem;
+  background-color: variable.$bg-color;
+  color: variable.$color-dark-text;
+  line-height: 1.7;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
