--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -18,3 +18,12 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+
+img {
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
