--- a/src/assets/scss/detailphoto.scss
+++ b/src/assets/scss/detailphoto.scss
@@ -28,6 +28,9 @@
     margin-bottom: 2rem;
     overflow: hidden;
     position: relative;
+    &:hover {
+      color: #fff;
+    }
 
     &::before {
       content: '';
