--- a/src/assets/scss/register.scss
+++ b/src/assets/scss/register.scss
@@ -1,1 +1,139 @@
+@use 'global';
 @use 'variable';
+
+.header {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+
+  &__title {
+    font-size: 4rem;
+    font-weight: 700;
+    color: variable.$color-dark-text;
+    text-transform: uppercase;
+    margin: 1rem 0;
+  }
+
+  &__img {
+    width: 100px;
+    height: 100px;
+    border: 1px solid #333;
+    border-radius: 50%;
+    margin-bottom: 2rem;
+    overflow: hidden;
+  }
+
+  &__btn {
+    outline: none;
+    border: none;
+    padding: 2rem 4rem;
+    background-color: transparent;
+    border-radius: 0.8rem;
+    font-size: 2rem;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    &:hover {
+      color: #fff;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 2px;
+      height: 100%;
+      background-color: rgb(18, 18, 175);
+      transition: width 0.25s linear;
+      z-index: -1;
+    }
+    &:hover::before {
+      width: 100%;
+    }
+  }
+}
+
+.add__form {
+  max-width: 1200px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 auto;
+
+  .invalid {
+    color: red;
+    font-size: 2rem;
+    font-weight: 600;
+  }
+
+  &-group {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+    label,
+    select,
+    input {
+      display: block;
+      width: 70%;
+      outline: none;
+    }
+
+    label {
+      font-size: 2rem;
+      color: variable.$color-dark-text;
+      margin-bottom: 1rem;
+      margin-top: 1rem;
+    }
+
+    input,
+    select {
+      color: #fff;
+      background-color: #263059;
+      height: 4rem;
+      padding: 0 2rem;
+      border-radius: 5px;
+      border: none;
+    }
+
+    input:focus {
+      background-color: #fff;
+      color: #263059;
+      border-bottom: 1px solid #263059;
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
+    }
+  }
+
+  input[type='submit'] {
+    background-color: cornflowerblue;
+    outline: none;
+    padding: 1.5rem 2.5rem;
+    margin-top: 5rem;
+    border: 1px solid #a5a5a5;
+    border-radius: 0.5rem;
+    color: #fff;
+    cursor: pointer;
+    font-size: 2rem;
+
+    &:hover {
+      transform: translateY(-3px);
+    }
+
+    &:active {
+      transform: translateY(3px);
+    }
+  }
+
+  .btn-link {
+    font-size: 2rem;
+    font-weight: 600;
+    color: variable.$color-light-text;
+  }
+}
