--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -166,11 +166,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
-
-        &--img {
-          max-width: 100%;
-          object-fit: cover;
-        }
+      }
+      &--img {
+        max-width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
       &__des {
         font-size: 1.7rem;
