--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -91,6 +91,7 @@
 }
 .photos {
   max-width: 120rem;
+  width: 100%;
   // max-width: calc($max-width + 12rem);
   // display: flex;
   // align-items: center;
