--- a/src/assets/scss/register.scss
+++ b/src/assets/scss/register.scss
@@ -1,139 +1,179 @@
 @use 'global';
 @use 'variable';
 
-.header {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-
-  &__title {
-    font-size: 4rem;
-    font-weight: 700;
-    color: variable.$color-dark-text;
-    text-transform: uppercase;
-    margin: 1rem 0;
-  }
-
-  &__img {
-    width: 100px;
-    height: 100px;
-    border: 1px solid #333;
-    border-radius: 50%;
-    margin-bottom: 2rem;
-    overflow: hidden;
-  }
-
-  &__btn {
-    outline: none;
-    border: none;
-    padding: 2rem 4rem;
-    background-color: transparent;
-    border-radius: 0.8rem;
-    font-size: 2rem;
-    cursor: pointer;
-    position: relative;
-    overflow: hidden;
-    &:hover {
-      color: #fff;
-    }
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 2px;
-      height: 100%;
-      background-color: rgb(18, 18, 175);
-      transition: width 0.25s linear;
-      z-index: -1;
-    }
-    &:hover::before {
-      width: 100%;
-    }
-  }
+body {
+  background-color: #cbf3f0;
 }
 
-.add__form {
-  max-width: 1200px;
+.main {
+  background-color: #82c0cc;
+  color: #fff;
+  max-width: 42rem;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin: 0 auto;
+  border-radius: 2px;
 
-  .invalid {
-    color: red;
-    font-size: 2rem;
-    font-weight: 600;
+  @media screen and (max-width: 50rem) {
+    margin-top: 5rem;
   }
 
-  &-group {
-    width: 100%;
+  .add__form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+    padding: 2rem;
 
-    label,
-    select,
-    input {
-      display: block;
-      width: 70%;
-      outline: none;
+    .header {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+
+      &__title {
+        color: #fff;
+
+        font-size: 4rem;
+        margin: 3rem 0;
+        letter-spacing: 1.5px;
+      }
+
+      &__img {
+        width: 100px;
+        height: 100px;
+        border: 1px solid #333;
+        border-radius: 50%;
+        margin-bottom: 2rem;
+        overflow: hidden;
+      }
+
+      &__btn {
+        outline: none;
+        border: none;
+        border-radius: 0.8rem;
+
+        padding: 2rem 4rem;
+        margin-bottom: 2rem;
+
+        background-color: transparent;
+
+        cursor: pointer;
+        overflow: hidden;
+
+        font-size: 2.4rem;
+        color: #05668d;
+        letter-spacing: 1.2px;
+
+        position: relative;
+        z-index: 1;
+        &::before {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 2px;
+          height: 100%;
+          background-color: #02c39a;
+          transition: width 0.25s linear;
+          z-index: -1;
+        }
+        &:hover {
+          color: #fff;
+        }
+
+        &:hover::before {
+          width: 100%;
+        }
+      }
     }
 
-    label {
+    .invalid {
+      color: #a21112;
       font-size: 2rem;
-      color: variable.$color-dark-text;
-      margin-bottom: 1rem;
-      margin-top: 1rem;
+      font-weight: 600;
     }
 
-    input,
-    select {
-      color: #fff;
-      background-color: #263059;
-      height: 4rem;
-      padding: 0 2rem;
-      border-radius: 5px;
+    &-group {
+      width: 100%;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+
+      margin-bottom: 2.5rem;
+
+      .message {
+        font-size: 1.6rem;
+        display: inline-block;
+        margin-top: 1rem;
+        letter-spacing: 1.2px;
+      }
+
+      &--control {
+        position: relative;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        input {
+          width: 90%;
+          height: 3.8rem;
+          outline: none;
+          padding: 0 4rem;
+          font-size: 1.8rem;
+          color: #02c39a;
+        }
+
+        i {
+          position: absolute;
+          left: 3rem;
+          top: 50%;
+          color: #02c39a;
+          font-size: 1.8rem;
+          transform: translateY(-50%);
+        }
+      }
+    }
+
+    &--link {
+      margin: 0 0 2rem 0;
+
+      a {
+        font-size: 1.8rem;
+        color: rgb(255, 255, 255);
+        cursor: pointer;
+
+        span {
+          color: #02c39a;
+          font-weight: bolder;
+          font-size: 2rem;
+        }
+      }
+    }
+
+    &--submit {
       border: none;
+      outline: none;
+      padding: 1.5rem 3.5rem;
+      letter-spacing: 1.2px;
+      border-radius: 2px;
+      font-size: 1.8rem;
+      background-color: #02c39a;
+      color: #fff;
+      border-bottom: 2px solid #03af8a;
+      transition: all 0.3s;
+      cursor: pointer;
+
+      margin-bottom: 2.5rem;
+
+      &:hover {
+        transform: translateY(-3px);
+      }
+
+      &:active {
+        transform: translateY(3px);
+      }
     }
-
-    input:focus {
-      background-color: #fff;
-      color: #263059;
-      border-bottom: 1px solid #263059;
-      border-bottom-left-radius: 0px;
-      border-bottom-right-radius: 0px;
-    }
-  }
-
-  input[type='submit'] {
-    background-color: cornflowerblue;
-    outline: none;
-    padding: 1.5rem 2.5rem;
-    margin-top: 5rem;
-    border: 1px solid #a5a5a5;
-    border-radius: 0.5rem;
-    color: #fff;
-    cursor: pointer;
-    font-size: 2rem;
-
-    &:hover {
-      transform: translateY(-3px);
-    }
-
-    &:active {
-      transform: translateY(3px);
-    }
-  }
-
-  .btn-link {
-    font-size: 2rem;
-    font-weight: 600;
-    color: variable.$color-light-text;
   }
 }
